--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-router-devtools": "^1.121.2",
     "@tanstack/react-table": "^8.21.2",
     "@tanstack/router-plugin": "^1.121.2",
+    "@types/node": "^24.0.15",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -39,7 +40,7 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
-    "jsdom": "^26.0.0",
+    "jsdom": "^26.1.0",
     "typescript": "^5.7.2",
     "vite": "^6.1.0",
     "vitest": "^3.0.5",
